# Brilliant-Fulfillment-Demo

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  flake.nix  main.py  pyproject.toml
app/: __init__.py  app.py  config.py  db.py  main.py
app/db/: __init__.py
app/duckdb/: __init__.py
app/models/: __init__.py  activity.py  admin.py  logs.py  machines.py  users.py
app/routes/: __init__.py  admin.py  logs.py  machines.py  packer.py  routes.py  settings.py  users.py
app/style/: input.css
app/style/templates/: base.html  check_in.html  check_out.html  create_machine.html  create_user.html  dashboard.html  error.html  index.html  login.html  note.html
app/utils/: __init__.py  validators.py
fake_data/: machines.csv  users.csv
manifest/: bff-demo-deployment.yaml  bff-demo-namespace.yaml  bff-demo-nodeport-service.yaml  bff-demo-service.yaml  deployment.yaml  mongo-data-persistentvolumeclaim.yaml  mongo-deployment.yaml  mongo-service.yaml
notes/: BFF-Demo.excalidraw  BFF-Diagram.excalidraw  CheckIn-Out_forms.excalidraw  FBB-Demo.excalidraw
pages/: dashboard.py  questionaire.py
scripts/: container-attached.sh  container.sh  docker-compose.sh  duckdb-ui.sh  fastapi-dev.sh  pytest-cov.sh
src/monotes/: __init__.py
src/monotes/bff/: __init__.py  elements.py
src/monotes/duckdb/: __init__.py
src/monotes/note/: __init__.py  routes.py
tests/: test_sanity.py
