[project]
name = "bff-demo"
version = "0.1.0"
description = "Packer Logs with Admin Dashboard"
readme = "README.md"
authors = [
    { name = "Andrew Thomas Lee", email = "andrewthomaslee.business@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datastar-py>=0.6.5",
    "duckdb>=1.4.0",
    "fastapi[standard]>=0.116.2",
    "jinja2>=3.1.6",
    "marimo>=0.16.0",
    "mohtml>=0.1.11",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.36.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.16.0",
    "pyrefly>=0.33.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.1",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]

[tool.setuptools]
packages = []


[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]