[project]
name = "bff-demo"
version = "0.1.0"
description = "Packer Logs with Admin Dashboard"
readme = "README.md"
authors = [
    { name = "Andrew Thomas Lee", email = "andrewthomaslee.business@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "datastar-py>=0.6.5",
    "duckdb>=1.4.0",
    "fastapi[standard]>=0.116.2",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.1",
    "pytz>=2025.2",
    "starlette[full]>=0.48.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.33.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.setuptools]
packages = []


[tool.ruff]
line-length = 101
target-version = "py313"
lint.ignore = ["E712"]



[tool.pyrefly]
project-includes = ["app/**/*", "main.py"]
